--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="build/main.css">
   </head>
   <body>
-    <div id="silder-picker" style="margin-top: 50px; width: 50%;">
+    <div id="silder-picker" style="margin: 50px 0 0 200px; width: 50%;">
       <input id="silder-picker-input">
     </div>
     <script src="bower_components/jquery/dist/jquery.js" ></script>
